# docs/swagger.json
@@ -5,11 +5,8 @@
     },
     "paths": {
         "/check-version": {
-            "post": {
-                "description": "This API endpoint checks the versions of E-commerce Payment Gateway data for two URLs constructed from a provided base URL.",
-                "consumes": [
-                    "application/json"
-                ],
+            "get": {
+                "description": "This API endpoint checks the versions of E-commerce Payment Gateway data for two URLs constructed from a provided base URL in *ENV*.",
                 "produces": [
                     "application/json"
                 ],
@@ -17,17 +14,6 @@
                     "epg"
                 ],
                 "summary": "Check EPG Versions",
-                "parameters": [
-                    {
-                        "description": "Request containing the base URL",
-                        "name": "request",
-                        "in": "body",
-                        "required": true,
-                        "schema": {
-                            "$ref": "#/definitions/checkversion.CheckVersionRequest"
-                        }
-                    }
-                ],
                 "responses": {
                     "200": {
                         "description": "success response containing versions for both URLs",
@@ -52,18 +38,6 @@
         }
     },
     "definitions": {
-        "checkversion.CheckVersionRequest": {
-            "type": "object",
-            "required": [
-                "base_url"
-            ],
-            "properties": {
-                "base_url": {
-                    "description": "bank url \u003c epg_server_IP_address\u003e",
-                    "type": "string"
-                }
-            }
-        },
         "checkversion.EPGVersionsResponse": {
             "type": "object",
             "properties": {
